tests/baselines/reference/invalidDoWhileContinueStatements.errors.txt
==== tests/cases/compiler/invalidDoWhileContinueStatements.ts (6 errors) ====
    // All errors
    
    // naked continue not allowed
    continue;
    ~~~~~~~~~
!!! error TS2201: 'continue' statement can only be used within an enclosing iteration statement.
    
    // non-existent label
    ONE:
    do continue TWO; while (true)
       ~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
    
    // continue from inside function
    TWO:
    do {
        var x = () => {
            continue TWO;
            ~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }while (true)
    
    THREE:
    do {
        var fn = function () {
            continue THREE;
            ~~~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
        }
    }while (true)
    
    // continue forward
    do {
        continue FIVE;
        ~~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
        FIVE:
        do { } while (true)
    }while (true)
    
    // label on non-loop statement
    NINE:
    var y = 12;
    
    do {
        continue NINE;
        ~~~~~~~~~~~~~~
!!! error TS2203: Jump target not found.
    }while (true)